# Project4_CS5393_AK_CT

./: AvlTree.h  AvlTreeTest.cpp  CMakeLists.txt  DocumentParser.h  QueryProcessor.h  README.md  main.cpp
